// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|Checkbox default 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c4 > .c3 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c2 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c2 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c2 + label:focus {
  outline: 0;
}

.c2 + label:empty {
  padding: 0 0 0 1em;
}

.c2 + label::before,
.c2 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c2 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c2 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c2 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c2:focus + label::before,
.c2 + label:hover::before {
  background-color: #999;
}

.c2:checked + label {
  color: #222;
}

.c2:checked + label::before {
  background-color: #222;
}

.c2:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c1 {
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <section
    className="c1"
  >
    <span>
      <input
        checked={true}
        className="c2"
        id="0"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c3 c4"
        htmlFor="0"
      >
        
      </label>
    </span>
  </section>
  <section
    className="c1"
  >
    <span>
      <input
        checked={false}
        className="c2"
        id="1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c3 c4"
        htmlFor="1"
      >
        
      </label>
    </span>
  </section>
</div>
`;

exports[`Storyshots interact|Checkbox with custom label 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c3 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c1 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c1 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c1 + label:focus {
  outline: 0;
}

.c1 + label:empty {
  padding: 0 0 0 1em;
}

.c1 + label::before,
.c1 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c1 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c1 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c1:focus + label::before,
.c1 + label:hover::before {
  background-color: #999;
}

.c1:checked + label {
  color: #222;
}

.c1:checked + label::before {
  background-color: #222;
}

.c1:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

<div
  className="c0"
>
  <span>
    <input
      checked={true}
      className="c1"
      id="3"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="c2"
      htmlFor="3"
      style={
        Object {
          "marginTop": 0,
        }
      }
      type="header"
    >
      Check me out
    </label>
  </span>
</div>
`;

exports[`Storyshots interact|Checkbox with label 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c1 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c1 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c1 + label:focus {
  outline: 0;
}

.c1 + label:empty {
  padding: 0 0 0 1em;
}

.c1 + label::before,
.c1 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c1 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c1 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c1:focus + label::before,
.c1 + label:hover::before {
  background-color: #999;
}

.c1:checked + label {
  color: #222;
}

.c1:checked + label::before {
  background-color: #222;
}

.c1:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

<div
  className="c0"
>
  <span>
    <input
      checked={true}
      className="c1"
      id="2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="c2 c3"
      htmlFor="2"
    >
      Enable this setting
    </label>
  </span>
</div>
`;
